"Added ui-sref links to connect views"

--- a/views/booked.html
+++ b/views/booked.html
@@ -2,6 +2,5 @@
 
     <h1>Thanks for trusting us with your trip to <br>   {{location.city}}</h1>
 
-    <!--The ui-sref should be pointing to the packages state -->
-    <button> VIEW MORE PACKAGES </button>
+    <button ui-sref="packages"> VIEW MORE PACKAGES </button>
 </section>
